<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:onClick="onClickButtonBack"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:background="@null"
            android:padding="4dp"
            android:scaleType="fitEnd"
            android:src="@null" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/viewInfo2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/icon_button_grandprix" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo1_1" />

                <Button
                    android:id="@+id/buttonKikakuInfo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:onClick="onClickKikakuInfo"
                    android:text="@string/KikakuInfoButton1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewInfo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/icon_button_goods" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo2_1" />

                <ImageView
                    android:layout_width="600dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/goods1"
                    app:srcCompat="@drawable/goods1" />

                <ImageView
                    android:layout_width="600dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/goods2"
                    app:srcCompat="@drawable/goods2" />

                <ImageView
                    android:layout_width="600dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/goods3"
                    app:srcCompat="@drawable/goods3" />

                <ImageView
                    android:layout_width="600dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/goods4"
                    app:srcCompat="@drawable/goods4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewInfo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/icon_button_project_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#B5CCF4"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_2"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_3" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#EAB5AA"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_4"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_5" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#E4B0EA"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_6"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_7" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#EAC76C"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_8"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_9" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#90BE4F"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_12"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_13" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#B5CCF4"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_14"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_15" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#F8CBB4"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_16"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_17" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#EAB28F"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_18"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_19" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#AAAAF4"
                    android:padding="8dp"
                    android:text="@string/KikakuInfo4_20"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/KikakuInfo4_21" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewInfo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_button_guest"
                    app:srcCompat="@drawable/icon_button_guest" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:src="@drawable/guest1"
                    app:srcCompat="@drawable/guest1" />

                <Button
                    android:id="@+id/buttonKikakuInfo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorButton"
                    android:onClick="onClickKikakuInfo"
                    android:text="@string/KikakuInfoButton4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>