<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:onClick="onClickButtonBack"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/TitleSetting"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="3"
            android:background="@null"
            android:padding="4dp"
            android:scaleType="fitEnd"
            android:src="@null" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_repeat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_belong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SettingBelong"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_fontsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SettingText"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_about_app"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_setting_frame"
                android:onClick="onClickButtonAbout"
                android:text="@string/SettingAbout"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_to_web"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_setting_frame"
                android:onClick="onClickButtonToWeb"
                android:text="@string/SettingWeb"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>